option('ttml', type : 'feature', value : 'auto', description : 'Build GStreamer Fluendo TTML Element')
option('injectbin', type : 'feature', value : 'auto', description : 'Build GStreamer Fluendo injectbin Element')

# gst-fluendo-ttml options
option('ttml_build_ttmlparse', type : 'feature', value : 'enabled', description : 'gst-fluendo-ttml: build the ttmlparse element')
option('ttml_build_ttmlrender', type : 'feature', value : 'enabled', description : 'gst-fluendo-ttml: build the ttmlrender element')

option('examples', type : 'feature', value : 'auto', description : 'Build examples')
option('tests', type : 'feature', value : 'auto', description : 'Build tests')
